no more student :)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</section>
 				 
 				<footer class="text">
-				Hi, my name is Yuval Mitrani and i'm a Software Engineer student in Shenkar.
+				Hi, my name is Yuval Mitrani and i'm a Software Engineer :).
 				</footer>
 			</div><!-- END .wrapper -->
 
